methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:11: error: not found: value estSurBisuit
  if (estSurBisuit) {
      ^